# hopcop

./: .gitignore  Cargo.toml  README.md
etc/: meancop  sat.txt  starexec_run_default
src/: builder.rs  db.rs  main.rs  options.rs  pp.rs  search.rs  subst.rs  syntax.rs  tableau.rs  tptp.rs  tstp.rs  util.rs
