[package]
name = "hopcop"
version = "0.1.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
edition = "2021"
description = "an automatic theorem prover for first-order logic"
license = "MIT"

[dependencies]
anyhow = "1"
fnv = "1"
memmap = "0.7"
thiserror = "1"
tptp = "0.31"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]
