[package]
name = "hopcop"
version = "0.1.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
edition = "2024"
description = "an automatic theorem prover for first-order logic"
license = "MIT"

[dependencies]
anyhow = "1"
fnv = "1"
indexmap = "2.9"
memmap = "0.7"
tptp = "0.31"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.rand]
version = "0.9"
features = ["small_rng"]
